--- a/index.html
+++ b/index.html
@@ -3,33 +3,43 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Doc 1</title>
+    <title>Episode 2</title>
     <script src="https://unpkg.com/vue@3"></script>
+    <style>
+        html, body {
+            height: 100%;
+        }
+        body {
+            display: grid;
+            place-items: center;
+        }
+
+        .text-red {
+            color: red;
+        }
+
+        .text-green {
+            color: green;
+        }
+
+    </style>
 </head>
 <body>
     <div id="app">
-        <p>
-            <input type="text" v-model="greeting">
-        </p>
-
-        <p>
-            {{ greeting }} ( {{greeting.length }})
-        </p>
-
+        <button :class="active ? 'text-red' : 'text-green'" @click="toggle"> Click me </button>
     </div>
 
     <script>
         Vue.createApp({
             data() {
                 return {
-                    greeting: 'Hello Vue - how are you going'
-                };
+                    active: false
+                }
             },
-
-            mounted(){
-                setTimeout(() => {
-                    this.greeting = 'Changed';
-                }, 3500);
+            methods: {
+                toggle() {
+                    this.active = ! this.active;
+                }
             }
         }).mount('#app');
     </script>
