--- a/index.html
+++ b/index.html
@@ -1,47 +1,75 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="en" class="h-full">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Episode 2</title>
     <script src="https://unpkg.com/vue@3"></script>
-    <style>
-        html, body {
-            height: 100%;
-        }
-        body {
-            display: grid;
-            place-items: center;
-        }
-
-        .text-red {
-            color: red;
-        }
-
-        .text-green {
-            color: green;
-        }
-
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="h-full grid place-items-center">
     <div id="app">
-        <button :class="active ? 'text-red' : 'text-green'" @click="toggle"> Click me </button>
+        <section v-show="inprogressAssignements.length">
+            <h2 class="font-bold mb-2">In progress</h2>
+
+            <ul>
+                <li v-for="assignment in inprogressAssignements"
+                    :key="assignment.id"
+                >
+                    <label>
+                        {{ assignment.name }}
+
+                        <input type="checkbox" v-model="assignment.complete" >
+                    </label>
+                </li>
+            </ul>
+        </section>
+        <section v-show="completedAssignements.length" class="mt-8">
+
+            <h2 class="font-bold mb-2">Completed</h2>
+
+            <ul>
+                <li v-for="assignment in completedAssignements"
+                    :key="assignment.id"
+                >
+                    <label>
+                        {{ assignment.name }}
+
+                        <input type="checkbox" v-model="assignment.complete" >
+                    </label>
+                </li>
+            </ul>
+
+        </section>
+
+
     </div>
 
+
+
     <script>
-        Vue.createApp({
+        let app = {
             data() {
                 return {
-                    active: false
+                    assignments: [
+                        { id: 1, name: 'Finish Project', complete: false },
+                        { id: 2, name: 'Read book', complete: false },
+                        { id: 3, name: 'Complete puzzle', complete: false },
+                    ]
                 }
             },
-            methods: {
-                toggle() {
-                    this.active = ! this.active;
+
+            computed: {
+                inprogressAssignements() {
+                    return this.assignments.filter(assignment => ! assignment.complete);
+                },
+
+                completedAssignements() {
+                    return this.assignments.filter(assignment => assignment.complete);
                 }
             }
-        }).mount('#app');
+        };
+
+        Vue.createApp(app).mount('#app');
     </script>
 
 
